# Prop.AI-2.0

./: .env  .env.example  .gitignore  Dockerfile  Odds API Documentation V4.docx  Odds API Documentation V4.txt  README.md  alembic.ini  auto_tune_model.py  balldontlie_ingest.py  compute_metrics.py  diagnose_filter_bias.py  diagnose_model_bias.py  docker-compose.yml  launch_prop_ai.ps1  morning_report.py  nba_dashboard.py  pyproject.toml  requirements.txt  run_dashboard.py  send_biweekly_tuning_report_email.py  send_report_email.py  send_weekly_report_email.py  tuning_guardrails.py  update_clv.py  update_results.py
.github/workflows/: pipeline.yml  prop_ai_schedule.yml  prop_ai_tuning.yml
app/api/: main.py
app/cli/: main.py
app/core/adapters/: ingest_pipeline.py  openai_stub.py  theodds.py
app/core/artifacts/: writer.py
app/core/metrics/: edge.py  metrics_aggregator.py  tracking.py
app/core/modeling/: config.py  distribution.py  projection.py
app/core/normalization/: nba_props.py
app/core/pricing/: odds_math.py
app/core/storage/: repository.py
app/core/utils/: logging.py
docs/: architecture.md  metrics.md  modeling.md
migrations/: env.py
migrations/versions/: 001_initial.py
output/: daily_board_2026-02-26.json  daily_edges_2026-02-25.csv  daily_edges_2026-02-26.csv  daily_metrics_2026-02-25.json  daily_metrics_2026-02-26.json
tests/: test_metrics.py  test_odds_math.py
